# SkiaGui

./: README.md  SkiaGui.sln  SkiaGui.vcxproj  SkiaGui.vcxproj.filters  WindowMain.cpp  WindowMain.h  main.cpp  main.manifest
Doc/: CLay思路.md  todo.md
Element/: Element.cpp  Element.h  ElementBase.cpp  ElementBase.h  Eventer.h  Image.cpp  Image.h  Text.cpp  Text.h
Lib/clay/: clay.h
SkiaGui/: SkiaGui.sln
SkiaGui/SkiaGui/: SkiaGui.vcxproj  SkiaGui.vcxproj.filters  WindowMain.cpp  WindowMain.h  main.cpp
Window/: Backend.cpp  Backend.h  OpenGL.cpp  OpenGL.h  Raster.cpp  Raster.h  WindowBase.cpp  WindowBase.h
doc/: ScrollerView.md  todo.md  显示关联的文件菜单.md
examples/simple/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/gl/: CMakeLists.txt  CreatePlatformGLTestContext_win.cpp  DisplayParams.h  FlushFinishTracker.cpp  GLTestContext.cpp  GLTestContext.h  GLWindowContext.cpp  GLWindowContext.h  GLWindowContext_win.cpp  SkWGL.h  SkWGL_win.cpp  TestContext.cpp  TestContext.h  WindowContext.cpp  WindowContext.h  WindowContextFactory_win.h
